create: get receive message api
